# JKToVictronInterface

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
DataDumps/: DumpFromJKBMS Commented.md  DumpFromJKBMS Commented2.md
Schematics/DevBoard/JKBMStoCAN/: board1.brd  board1.sch  eagle.epf  untitled.pro
Schematics/DevBoard/JKBMStoCAN/gerberoutput/CAMOutputs/Assembly/: board1.txt
Schematics/DevBoard/JKBMStoCAN/gerberoutput/CAMOutputs/DrillFiles/: drill_1_16.xln
Schematics/DevBoard/JKBMStoCAN/gerberoutput/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
components/html/: index.html
main/: CMakeLists.txt  JKBMSWrapper.cpp  JKBMSWrapper.h  ResultsFound.yml  component_configuration.c  component_configuration.h  component_init.c  component_init.h  jkbmsInterface.cpp  jkbmsInterface.h  main.c  mqtt_client.c  mqtt_client.h  webpage_handler.c  webpage_handler.h  wifi_prov_mgr.c
